--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
         <nav>
             <span class="menu-toggle">&#9776;</span>
             <ul class="menu">
-                <li><a href="mainpage.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                <!-- <li>
                     <a href="#">Services</a>
